--- a/client/app/experiment-tracking-entity-status/experiment-tracking-entity-status.component.scss
+++ b/client/app/experiment-tracking-entity-status/experiment-tracking-entity-status.component.scss
@@ -1,6 +1,6 @@
 .content-fill-container {
   position: absolute;
-  top: 40px;
+  top: 0;
   left: 0;
   bottom: 0;
   right: 0;
